--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -53,7 +53,7 @@ margin: 20px 0;
     position: fixed;
     left: 20%;
     right: 20%;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgb(255, 255, 255);
     backdrop-filter: blur(2px);
 }
 .gorunur {
@@ -62,4 +62,27 @@ margin: 20px 0;
     height: 100%;
     width: 100%;
     position: fixed;
+}
+
+.exitcontainer{
+    width: 100%;
+    display: flex;
+    justify-content: end;
+}
+
+.exits{
+    cursor: pointer;
+    padding: 10px;
+}
+
+.products-sub{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    margin: 10px 20px;
+}
+
+.product-image img{
+    max-width: 100%;
+    height: 400px;
+    object-fit: contain;
 }
