--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -86,3 +86,18 @@ margin: 20px 0;
     height: 400px;
     object-fit: contain;
 }
+
+.addProductContainer{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+}
+.addProductHead{
+    font-size: 30px;
+    text-align: center;
+    font-family: var(--first-font);
+}
+.addProductContainer img{
+    max-width: 100%;
+    height: 300px;
+    object-fit: contain;
+}
