--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
 margin: 0;
 padding: 0;
@@ -100,4 +102,22 @@ margin: 20px 0;
     max-width: 100%;
     height: 300px;
     object-fit: contain;
+}
+
+.filterProductinds {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px;
+}
+
+select#categorySelect {
+    padding: 7px 7px;
+    font-family: var(--first-font);
+    background-color: #000;
+    color: #fff;
+}
+select#categorySelect option:hover{
+    background-color: #fff;
+    color: #000;
+    transition: 0.3s;
 }
