--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -19,8 +19,26 @@ padding: 0 20px !important;
 .header{
 width: 100%;
 height: auto;
-display: flex;
-justify-content: end;
+
+}
+
+a.basket {
+    background-color: #000;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-family: var(--first-font);
+    border-radius: 20px;
+}
+a.basket i {
+    padding-right: 10px;
+}
+
+.main-menu{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 0;
 }
 .img-homeimages{
 max-width: 100%;
@@ -81,14 +99,27 @@ margin: 20px 0;
     display: grid;
     grid-template-columns: repeat(2,1fr);
     margin: 10px 20px;
+    gap: 50px;
 }
 
-.product-image img{
-    max-width: 100%;
+.product-image img {
+    width: 100%;
     height: 400px;
-    object-fit: contain;
+    object-fit: cover;
 }
-
+.product-text p {
+    font-family: var(--first-font);
+}
+.product-text a {
+    display: inline-block;
+    background-color: #000;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-family: var(--first-font);
+    border-radius: 20px;
+    margin-top: 20px;
+}
 .addProductContainer{
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -109,7 +140,21 @@ margin: 20px 0;
     grid-template-columns: repeat(3, 1fr);
     gap: 50px;
 }
-
+.createFilterProducts img {
+    max-width: 100%;
+    height: 300px;
+    object-fit: fill;
+}
+.createFilterProducts h3 {
+    font-family: var(--first-font);
+    padding: 10px 0;
+    font-size: 25px;
+}
+.createFilterProducts p {
+    font-size: 18px;
+    font-family: var(--first-font);
+    padding: 10px 0;
+}
 select#categorySelect {
     padding: 7px 7px;
     font-family: var(--first-font);
