--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -171,13 +171,35 @@ select#categorySelect option:hover{
 .basketCont{
     display: none;
 }
-
+.basketCont img{
+    max-width: 100;
+    height: 100px;
+    object-fit: contain;
+}
 .basketContOpen {
-    display: block;
+   display: block;
     transition: 3s;
     position: absolute;
     top: 80px;
     width: 300px;
     height: 200px;
     background-color: #000;
+    padding: 10px 0;
+
+}
+.basketFlex{
+    display: flex;
+    justify-content: space-between;
+}
+
+.basketText h3{
+    color: #fff;
+    font-size: 18px;
+    font-family: var(--first-font);
+}
+
+.basketText p{
+    color: #fff;
+    font-size: 18px;
+    font-family: var(--first-font);
 }
